--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.27.2",
     "md": "^0.6.0",
     "moment": "^2.29.4",
+    "octokit": "^2.0.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
