--- a/src/assets/projects/projects.json
+++ b/src/assets/projects/projects.json
@@ -1,5 +1,24 @@
 [
   {
+    "id": 4,
+    "name": "Portfolio",
+    "tags": [
+      {
+        "name": "Site web"
+      },
+      {
+          "name": "open-source"
+      }
+    ],
+    "description": "Le site sur lequel tu te trouve !",
+    "langs_frameworks": ["vuejs"],
+    "links": {
+        "github": "https://github.com/Nonolanlan1007/portfolio"
+    },
+    "content": "Voici mon portfolio ! Vous pourrez ici retrouver toutes mes créations.\n\nCe site a entièrement été conçu avec VueJS, et je le considère un peu comme monj premier \"vrai\" site.",
+    "created_at": 1673737200
+  },
+  {
     "id": 1,
     "name": "YopBot",
     "tags": [
