--- a/src/assets/projects/projects.json
+++ b/src/assets/projects/projects.json
@@ -89,6 +89,23 @@
     },
     "content": "JokeMan est un robot Discord qui envoie aléatoirement une blague dans un serveur !",
     "created_at": 1657404000
+  },
+  {
+    "id": 5,
+    "name": "Morpion",
+    "tags": [
+      {
+        "name": "Site web"
+      }
+    ],
+    "description": "Un petit morpion assez simpliste",
+    "langs_frameworks": ["html", "css", "javascript"],
+    "links": {
+        "github": "https://github.com/Nonolanlan1007/morpion",
+        "website": "https://morpion.is-an.app"
+    },
+    "content": "Un morpion extrêment basique créé en cours en HTML, CSS et JS sans aucun framework :)",
+    "created_at": 1675206000
   }
 ]
 
